--- a/ToneReader/Base.lproj/Main.storyboard
+++ b/ToneReader/Base.lproj/Main.storyboard
@@ -14,13 +14,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIF-r0-ltu" customClass="CircleWaveView" customModule="ToneReader" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="384" width="414" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="s9O-z2-Qg4"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="aIF-r0-ltu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0ub-0y-xmC"/>
+                            <constraint firstItem="aIF-r0-ltu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aYK-B3-Ysb"/>
+                            <constraint firstItem="aIF-r0-ltu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dNu-dr-69b"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="audioPlot" destination="aIF-r0-ltu" id="9Ue-nG-Pxy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="127"/>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
 </document>
